--- a/_posts/2025-02-18-自傳.md
+++ b/_posts/2025-02-18-自傳.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Biology"
+title:  "自傳"
 date:   2025-02-18 20:09:39 +0800
 categories: jekyll update
 ---
-
+陽明交通大學電機系/個人申請/資料/手寫自傳
 <img src="https://github.com/Hazel-1212/Hazel-the-Cat/blob/main/%E4%BA%A4%E5%A4%A7%E9%9B%BB%E8%87%AA%E5%82%B3%E6%89%8B%E5%AF%AB.png?raw=true" width=800>
