--- a/_posts/2025-02-24-物理進度規畫.md
+++ b/_posts/2025-02-24-物理進度規畫.md
@@ -4,17 +4,28 @@ title:  "物理進度規畫"
 date:   2025-02-24 12:43:39 +0800
 categories: jekyll update
 ---
+# 前言
+以選修搭配必修，複習同時插入對應的選修內容。選修方面就不會要求要算分科類型的題目(除了段考現進度)，以觀念為主，會篩掉一些對學測cp值不高的部分。最終會帶到選修I~V所有章節。選修部分我每次提供講義和練習題作業。
 
+以下的排在同周上課的範圍是選修和新關鍵互對照，一堂課複習、延伸同個主題。
 
-
-| 日期  | Class1:新關鍵  | Class2:選修II  | HW1:新關鍵  | HW2:選修  | 備註  |
-|--------|--------|--------|--------|--------|--------|
-| 2/26  | 4-3 ~ 4-7  電磁與波 | 1  |   2(上)   |        |  上次到線圈     |
-| 3/5  | 4-8 ~ 4-11 光  | 1  |   2(下)    |        |     |
-| 3/12  | 5 能量 | 1  |   2(下)    |        |     |
-| 3/19  | 4-8 ~ 4-11  | 1  |   2(下)    |        |     |
-| 3/26  | 4-8 ~ 4-11  | 1  |   2(下)    |        |     |
-| 4/2  | 4-8 ~ 4-11  | 1  |   2(下)    |        |     |
+| Date  | Theme | Class  | HW | Memo  |
+|--------|--------|--------|--------|--------|
+| 02/26  | 力學      | 新關鍵 2 & 選I 2~5  |  新關鍵  |     |
+| 03/05  | 簡諧運動  | 新關鍵 2 & 選I CH5 |    |     |
+| 03/12  | 萬有引力  | 新關鍵 3 & 選I CH6  |    |     |
+| 03/19  | 動量 | 新關鍵 3 & 選II CH1  |    |     |
+| 03/26  | 角動量    | 新關鍵 3 & 選II CH1   |    |     |
+| 04/02  | 功與能量 | 新關鍵 3 & 選II CH 2、3  |    |     |
+| 04/09  | 靜電學  | 新關鍵 4 & 選IV CH1   |    |     |
+| -  | 電流磁效應 | 新關鍵 4 & 選IV CH2   |    |     |
+| -  | 電磁感應 | 新關鍵 4 & 選IV CH3   |    |     |
+| -  | 波 | 新關鍵 4 & 選III CH1   |    |     |
+| -  | 都卜勒與聲波 | 新關鍵 4 & 選III CH2   |    |     |
+| -  | 幾何光學 | 新關鍵 4 & 選III CH3   |    |     |
+| -  | 物理光學 | 新關鍵 4 & 選III CH4   |    |     |
+| -  | 熱學與能量形式 | 新關鍵 5 & 選II CH4   |    |     |
+| -  | 現代物理 | 新關鍵 6 & 選V CH2、3   |    |     |
 
 # 新關鍵物理
 
@@ -101,4 +112,58 @@ categories: jekyll update
 主題 4 量子躍遷 
 
 主題 5 原子模型
+
+
+# 選修物理
+
+**選物I 力學一**
+
+CH1測量與不確定度
+
+CH2直線運動
+
+CH3平面運動
+
+CH4牛頓運動定律
+
+CH5週期運動
+
+CH6萬有引力
+
+**選物II 力學二與熱學**
+
+CH1動量與角動量
+
+CH2功與能量
+
+CH3牛頓運動定律的應用
+
+CH4熱學
+
+**選物III 波動、光及聲音**
+
+CH1波動
+
+CH2聲波
+
+CH3幾何光學
+
+CH4物理光學
+
+**選物IV 電磁現象一**
+
+CH1靜電學
+
+CH2電流的磁效應
+
+CH3電磁感應
+
+**選物V 電磁現象二與量子現象**
+
+CH1電路學
+
+CH2量子現象
+
+CH3原子結構
+
 
