--- a/_posts/2025-02-18-大一上修課紀錄.md
+++ b/_posts/2025-02-18-大一上修課紀錄.md
@@ -4,6 +4,21 @@ title:  "113-1 Courses"
 date:   2025-02-16 13:46:19 +0800
 categories: jekyll update
 ---
+# 前言
+- 修課年度 : 113-1
+- 修課類別 : 交大電機系 / 大一上
+- 課程一覽 :
+
+| 課名           | 教授     |
+|----------------|----------|
+| 微積分         | 王夏聲   |
+| 普通物理       | 林俊良   |
+| 計算機概論     | 陳宏明   |
+| 邏輯設計       | 賴柏承   |
+| 數位設計與製造 | 曾聖凱   |
+| 西洋歌劇史     | 宋育任   |
+| 仿生科技       | 陳榮治   |
+
 # **電機系大一上必修**
 ## **微積分(一)**
 
@@ -231,18 +246,13 @@ Final Programming Test 15%   * *電機系大會考* *
 
 ### 評分依據:
 
-
 HW 20% * *7 times* *
-
 
 Quiz 20% * *7 times and take the best 5 grades* *
 
-
 Midterm 30%
 
-
 Final 30%  * *電機系大會考* *
-
 
 ### 介紹:
 沒有Final Project，期末比較好過。
@@ -261,9 +271,7 @@ Final 30%  * *電機系大會考* *
 3. 賴柏承教授的PPT簡單扼要，很適合搭配課本一起看!
 4. 上課或下課時參考PPT、原文書用Google文件做屬於自己的整理筆記，更好理解。*用Google文件純屬複製貼上方便。*
 
-
 **最終成績: A+**
-
 
 # **通識課程**
 ## **數位設計與製造**
@@ -338,7 +346,7 @@ Final 30%  * *電機系大會考* *
 
 ### 心得:
 老師教學非常用心，課堂上就會播放很多歌劇知名曲調給我們聽，也會提供上課PPT，我每堂聽課、考前看PPT就能學到很多，
-如果要A以上聽說要每天都在聽歌劇才有辦法，雖然考試都考上課內的歌劇，但聽片段就能判斷哪部也是要非常熟悉啊~又不是中文歌。
+如果要A以上聽說要每天都在聽歌劇才有辦法，雖然考試都考上課內的歌劇，但聽片段就能判斷哪部也是要非常熟悉，又不是中文歌。
 有音樂背景再修這堂課，不然就是對音樂感興趣且不在意GPA。
 
 
@@ -376,7 +384,7 @@ Final 30%  * *電機系大會考* *
 很涼又甜，找carry的組員就能事半功倍。
 
 
-我沒有很長上線聽課，代表應該沒點名，也並沒有專利或參加比賽，我是負責口頭報告，打分重點可能是期末報告要夠有誠意啊。
+我沒有很常上線聽課，代表應該沒點名，也並沒有專利或參加比賽，我是負責口頭報告，打分重點可能是期末報告要夠有做資料。建議分工時選負責口頭報告的，讓教授對自己有印象。
 
 
 **最終成績: A+**
