--- a/_posts/2025-02-18-大一上修課紀錄.md
+++ b/_posts/2025-02-18-大一上修課紀錄.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "113-1 Courses"
+title:  "大一上修課紀錄"
 date:   2025-02-16 13:46:19 +0800
 categories: jekyll update
 ---
-# 前言
+# **前言**
 - 修課年度 : 113-1
 - 修課類別 : 交大電機系 / 大一上
 - 課程一覽 :
@@ -22,22 +22,16 @@ categories: jekyll update
 # **電機系大一上必修**
 ## **微積分(一)**
 
-
 ### 任課老師:
 王夏聲
 
-
 ### 評分依據:
-
 
 微積分會考 30%
 
-
 小考3次 70%
 
-
 ### 調分歷史:
-
 
 這學期大會考全校調了15分，換算成學期成績調了15*0.3=<ins>4.5分</ins>。
 
