--- a/_posts/2025-06-08-大一下修課紀錄.md
+++ b/_posts/2025-06-08-大一下修課紀錄.md
@@ -9,15 +9,15 @@ categories: jekyll update
 - 修課類別 : 交大電機系 / 大一下
 - 課程一覽 :
 
-| 課名               | 教授   |
-|--------------------|--------|
-| 微積分甲(二)        | 王夏聲 |
-| 普通物理(二)        | 林俊良 |
-| 線性代數            | 吳卓諭 |
-| 機率                | 高榮鴻 |
-| 數位實驗            | 陳建安 |
-| 離散數學            | 趙家佐 |
-| 物件導向程式設計    | 王學誠 |
+| 課名           | 教授      | 心得         | 成績     |
+|----------------|----------|----------------|----------|
+| 微積分         | 王夏聲   | 涼但微二考試難很多，靠調分 | A+ |
+| 普通物理       | 林俊良   | 期末報告硬、考試風格變換大 | ? |
+| 線性代數            | 吳卓諭 | 功課多，考試全證明，助教很好 | ? |
+| 機率                | 高榮鴻 | 功課少，考試偏難，學期成績調分至全班平均78 | A+ |
+| 數位實驗            | 陳建安 | 花費時間長，結報分數低，期末專題占比重 | ? |
+| 離散數學            | 趙家佐 | 線上上課與小考，難易度主要是看有沒有感覺  | ? |
+| 物件導向程式設計    | 王學誠 | 線上上課放OCW，Lab主要像是在助教教學 | ? |
 
 
 # **電機系大一下必修**
