--- a/_posts/2025-06-08-大一下修課紀錄.md
+++ b/_posts/2025-06-08-大一下修課紀錄.md
@@ -22,6 +22,35 @@ categories: jekyll update
 
 # **電機系大一下必修**
 ## **微積分(二)**
+### 任課老師:
+王夏聲
+
+### 評分依據:
+
+微積分會考 30%
+
+小考3次 70%
+
+### 調分歷史:
+
+這學期微二大會考全校調了7分，3次tests都很難，所以教授決定把全班成績調<ins>22</ins>分。
+
+__若和上一級的等第差不到一分，教授會手動調分升等。__
+
+### 介紹:
+
+#### Tests
+
+10題選擇+10題填充，自己覺得教授微二的難度真的是比微一高很多，而且大部分出自己講義提到的重點，選擇題有很多判斷是否對錯的題目，所以就算沒去上課最好也把教授的Lecture Notes 看過。
+
+### 心得:
+
+沒有功課，不強迫出席。
+
+教授的微二真的很看最後調分，所以慎重考慮是否要修。
+
+**最終成績: A+**
+
 ## **物理(一) 英文班**
 ## **線性代數**
 
@@ -29,5 +58,8 @@ categories: jekyll update
 ## **機率 英文班**
 
 # **電機系專業必修實驗**
+## **數位實驗**
 
 # **電機系專業選修**
+## **離散數學**
+## **物件導向程式設計**
