--- a/_posts/2025-02-18-大一上修課紀錄.md
+++ b/_posts/2025-02-18-大一上修課紀錄.md
@@ -19,6 +19,8 @@ categories: jekyll update
 | 西洋歌劇史     | 宋育任   | 學到很多，但考試很硬 | A- |
 | 仿生科技       | 陳榮治   | 線上，非常涼、期末報告做好即可 | A+ |
 
+GPA: 4.12   Rank: 35 / 248
+
 # **電機系大一上必修**
 ## **微積分(一)**
 
