--- a/_posts/2025-06-08-大一下修課紀錄.md
+++ b/_posts/2025-06-08-大一下修課紀錄.md
@@ -16,7 +16,7 @@ categories: jekyll update
 | 線性代數            | 吳卓諭 | 功課多，考試全證明，助教很好 | ? |
 | 機率                | 高榮鴻 | 功課少，考試偏難，學期成績調分至全班平均78 | A+ |
 | 數位實驗            | 陳建安 | 花費時間長，結報分數低，期末專題占比重 | ? |
-| 離散數學            | 趙家佐 | 線上上課與小考，難易度主要是看有沒有感覺  | ? |
+| 離散數學            | 趙家佐 | 線上上課與小考，難易度主要是看有沒有感覺  | A |
 | 物件導向程式設計    | 王學誠 | 線上上課放OCW，Lab主要像是在助教教學 | ? |
 
 
