--- a/_posts/2025-06-08-大一下修課紀錄.md
+++ b/_posts/2025-06-08-大一下修課紀錄.md
@@ -19,6 +19,7 @@ categories: jekyll update
 | 離散數學            | 趙家佐 | 線上上課與小考，難易度主要是看有沒有感覺  | A |
 | 物件導向程式設計    | 王學誠 | 線上上課放OCW，Lab主要像是在助教教學 | ? |
 
+[**本學期課程整理之雲端資料夾**](https://drive.google.com/drive/folders/14q1KeROHo4nkrfZo7sCWmmEyWGQlE_qP?usp=sharing)
 
 # **電機系大一下必修**
 ## **微積分(二)**
@@ -33,7 +34,7 @@ categories: jekyll update
 
 ### 調分歷史:
 
-這學期微二大會考全校調了7分，3次tests都很難，所以教授決定把全班成績調<ins>22</ins>分。
+這學期微二大會考全校調了7分，3次tests都難，所以教授決定把全班成績調<ins>22</ins>分。
 
 __若和上一級的等第差不到一分，教授會手動調分升等。__
 
@@ -52,13 +53,72 @@ __若和上一級的等第差不到一分，教授會手動調分升等。__
 **最終成績: A+**
 
 ## **物理(一) 英文班**
+### 任課教授
+林俊良
+### 評分方式
+
+### 介紹
+
+1. 課內課程以事先錄好的YouTube為主
+2. 教授的實體課只有剛開學1-2次，上他的專業領域，半導體、固態物理，PPT要拍下來，期中考或期末考的bonus題會考到。
+3. 以今年的考題：
+  - 期中考：考課本的challenge 題與additional problems 中挑難的題考。bonus題問Issues of 2D FET，有拍到ppt 考前複習一下就行啦！
+  - 期末考：特別多簡答題，主要是近代物理部分（量子力學考了一題是公式證明，光子考簡答題，問普朗克的黑體輻射和古典差別，還有為什麼波動說無法解釋光電效應）
+### 心得
+
+總之自己是覺得分組報告蠻讓人焦慮的，如果和很扛的隊友同組就會很放心，但如果同組沒有比較active回答的人會比較危險。上學期花比較多時間團體討論，這學期才幾次討論就上場了，不管是對報告、對組員的熟悉度有差，但期末很忙大家都很忙不是每個人都想花時間在這件事上，所以還是很看小組氛圍。
+
+**最終成績: ?**
+
 ## **線性代數**
 
 # **電機系大二下必修**
 ## **機率 英文班**
+### 任課教授
+高榮鴻
+### 評分方式
+
+### 介紹
+1. 功課每次都是2-3題，都是課本習題，有答案，基本上分數是可以拿滿的。
+2. 如果上網查這門課的評價，應該算蠻兩極的，但整體教授算甜度中等。因為教授很堅持交大舊制，全班平均78，A+人數15%以內，所以不會因為考試太難而給分很硬。
+3. 考試方面，以往都會（考古+課本習題+一點新題目），但今年期中考、期末考就幾乎是新出的題目，還有課本改編題目。113-1期中考的成績分佈如下：
+4. 考試都是全手寫，會部分給分，算慷慨，所以都會盡量寫。
+5. 週五的早九課會不定時點名，教授說會根據點名時的出席率決定最後要不要幫你調分。
+
+### 心得
+
+1. 教授是一位和藹可親的教授，非常樂意下課回答問題，上課也會很希望大家可以回答他，但是我們都太害羞了。
+2. 我是大一先修機率，同時修微二、線代，沒有先學線代不會影響機率。機率主要是用到微積分泰勒展開式和多重積分，所以如果要先修機率的話可以先讀一下微二，這門課有4個大一生，機率算是蠻多人選擇先修掉的課，不然大二會很累。
+
+**最終成績: A+**
 
 # **電機系專業必修實驗**
 ## **數位實驗**
+### 任課教授
+陳建安
+### 評分方式
+1. 0~12%	Quiz (Optional)	
+2. 20~32%	Lab Implementation	
+3. 24%	Lab Report	
+4. 32%	Project (Team work. 3 students / team)	
+5. 12%	Miscellaneous items
+(e.g. winter vacation homework, material status,
+course performance, TA bonus/punishment,
+demo efficiency)
+
+**最後助教決定不小考**
+
+### 介紹
+1. 數位實驗是電機系大一唯一的實驗課程，並非一定要修，畢業前修滿2個專業必修實驗即可。但還是很多人抽這門課，所以要抽到這門課還是有點難度。
+2. 主要是邏輯設計實驗和Verilog語言: 前四堂Lab有點像是邏輯設計的延伸，會用到一邏輯設計的概念來接線。後四堂Lab是在FPGA (Nexys4 DDR) 上跑verilog程式，最後要做FPGA的期末專案。
+3. 專案評分如下 :
+
+| 評分項目 | 描述 | 分數 |
+|----------------|----------|----------|
+| 專題現場展示與驗收表現 | 驗收重點：操作流暢、解說清楚 | 40% |
+| 結報 | 彙整所有資料、進度、設計、最終結果 | 30% |
+| 線上影片互評 | 票選表現良好的組別，一人一票，不可以投自己 | 30% |
+
 
 # **電機系專業選修**
 ## **離散數學**
