--- a/_posts/2025-06-08-大一下修課紀錄.md
+++ b/_posts/2025-06-08-大一下修課紀錄.md
@@ -7,93 +7,117 @@ categories: jekyll update
 # **前言**
 - 修課年度 : 113-2
 - 修課類別 : 交大電機系 / 大一下
-- 課程一覽 :
+- 資料 : [**本學期課程整理之雲端資料夾**](https://drive.google.com/drive/folders/14q1KeROHo4nkrfZo7sCWmmEyWGQlE_qP?usp=sharing)
+- 一覽 :
 
 | 課名           | 教授      | 心得         | 成績     |
 |----------------|----------|----------------|----------|
-| 微積分         | 王夏聲   | 涼但微二考試難很多，靠調分 | A+ |
-| 普通物理       | 林俊良   | 期末報告硬、考試風格變換大 | ? |
-| 線性代數            | 吳卓諭 | 功課多，考試全證明，助教很好 | ? |
-| 機率                | 高榮鴻 | 功課少，考試偏難，學期成績調分至全班平均78 | A+ |
-| 數位實驗            | 陳建安 | 花費時間長，結報分數低，期末專題占比重 | ? |
-| 離散數學            | 趙家佐 | 線上上課與小考，難易度主要是看有沒有感覺  | A |
-| 物件導向程式設計    | 王學誠 | 線上上課放OCW，Lab主要像是在助教教學 | ? |
-
-[**本學期課程整理之雲端資料夾**](https://drive.google.com/drive/folders/14q1KeROHo4nkrfZo7sCWmmEyWGQlE_qP?usp=sharing)
+| [微積分(二)](#微積分(二))         | 王夏聲   | 涼但微二考試難很多，靠調分 | A+ |
+| [物理榮譽班(二)](#物理榮譽班(二)-英文班)      | 林俊良   | 期末報告硬、考試風格變換大 | ? |
+| [線性代數](#線性代數)            | 吳卓諭 | 功課多，考試全證明，助教很好 | A |
+| [機率](#機率-英文班)                | 高榮鴻 | 功課少，考試偏難，學期成績調分至全班平均78 | A+ |
+| [數位實驗](#數位實驗)            | 陳建安 | 花費時間長，結報分數低，期末專題占比重 | ? |
+| [離散數學](#離散數學)            | 趙家佐 | 線上上課與小考，難易度主要是看有沒有感覺  | A- |
+| [物件導向程式設計](#物件導向程式設計) | 王學誠 | 線上上課放OCW，Lab主要像是在助教教學 | ? |
 
 # **電機系大一下必修**
 ## **微積分(二)**
-### 任課老師:
+***
+### 任課老師
 王夏聲
 
-### 評分依據:
+### 評分依據
+1. 微積分會考 30%
+2. 小考3次 70%
 
-微積分會考 30%
-
-小考3次 70%
-
-### 調分歷史:
-
-這學期微二大會考全校調了7分，3次tests都難，所以教授決定把全班成績調<ins>22</ins>分。
+### 調分歷史
+這學期微二大會考全校調了7分，因為3次tests都難，所以教授決定把全班成績調<ins>22</ins>分。
 
 __若和上一級的等第差不到一分，教授會手動調分升等。__
 
-### 介紹:
-
+### 介紹
 #### Tests
-
 10題選擇+10題填充，自己覺得教授微二的難度真的是比微一高很多，而且大部分出自己講義提到的重點，選擇題有很多判斷是否對錯的題目，所以就算沒去上課最好也把教授的Lecture Notes 看過。
 
-### 心得:
-
-沒有功課，不強迫出席。
-
-教授的微二真的很看最後調分，所以慎重考慮是否要修。
+### 心得
+1. 沒有功課，不強迫出席。
+2. 教授的微二關鍵很看最後調分，所以慎重考慮是否要修。
 
 **最終成績: A+**
 
-## **物理(一) 英文班**
+## **物理榮譽班(二) 英文班**
+***
 ### 任課教授
 林俊良
 ### 評分方式
+1. On Class: 10%
+2. Mid Exam I: 25%
+3. Mid Exam II: 25%
+4. Report: 20%
+5. Homework: 20%
 
 ### 介紹
-
 1. 課內課程以事先錄好的YouTube為主
 2. 教授的實體課只有剛開學1-2次，上他的專業領域，半導體、固態物理，PPT要拍下來，期中考或期末考的bonus題會考到。
 3. 以今年的考題：
   - 期中考：考課本的challenge 題與additional problems 中挑難的題考。bonus題問Issues of 2D FET，有拍到ppt 考前複習一下就行啦！
   - 期末考：特別多簡答題，主要是近代物理部分（量子力學考了一題是公式證明，光子考簡答題，問普朗克的黑體輻射和古典差別，還有為什麼波動說無法解釋光電效應）
 ### 心得
-
 總之自己是覺得分組報告蠻讓人焦慮的，如果和很扛的隊友同組就會很放心，但如果同組沒有比較active回答的人會比較危險。上學期花比較多時間團體討論，這學期才幾次討論就上場了，不管是對報告、對組員的熟悉度有差，但期末很忙大家都很忙不是每個人都想花時間在這件事上，所以還是很看小組氛圍。
 
 **最終成績: ?**
 
 ## **線性代數**
+***
+### 任課教授
+吳卓諭
+### 評分方式
+1. Homework + Quizzes 30%
+2. Midterm exam 30%
+3. Final exam 40%
+
+### 介紹
+1. 考試、功課都是全證明和是非題（也要證為什麼對錯），助教和教授非常重視證明嚴謹性和對於空間的觀念，若題目沒證明到他們想看的或是形式不對基本上會全扣，部分給分方面比較嚴苛。
+2. 有演習課，助教出2～3題上一次的功課，每題請2位自願的同學上去，據說會以此加分，上課回答或問教授問題也會加分。
+3. 功課每週都有，大概都要寫六小時。
+### 心得
+1. 這門課是我這學期剛開學的時候覺得最挫折的，助教批改完後才會放e3他們親自寫的功課解答，所以起初我一直抓不到助教怎麼改功課的證明題、教授出題方向，功課的分數真的是從40到95都有，小考也沒多好。是到期中考的時候私底下寫信去約助教問問題，我才明白應該要怎麼準備教授的考試。
+2. 建議
+- 盡量找同學一起修，並且要參與演習課，當時我自己修，不敢在演習課舉手上台，我覺得蠻可惜的，就差那些加分XD。
+- 吳教授在課堂上說自己以前花很多時間讀線代，這學期我卻沒花很多時間在線代上，基本上就是寫功課前讀一下那次功課的範圍，有點像為了寫出那幾題而讀。最後發現如果沒有要花很多時間在這科，重點是要把課本中Theorem,Axiom,Prove,Remark這些地方背熟，因為證明都需要！助教親筆撰寫的功課解答都要看過，Quizlet的解答沒什麼用。
+
+**最終成績：A**
 
 # **電機系大二下必修**
 ## **機率 英文班**
+***
 ### 任課教授
 高榮鴻
 ### 評分方式
+1. Homework and in-class performance: 20%
+2. Midterm Exam: 40%
+3. Final Exam: 40%
 
 ### 介紹
-1. 功課每次都是2-3題，都是課本習題，有答案，基本上分數是可以拿滿的。
-2. 如果上網查這門課的評價，應該算蠻兩極的，但整體教授算甜度中等。因為教授很堅持交大舊制，全班平均78，A+人數15%以內，所以不會因為考試太難而給分很硬。
+1. 功課每次都是2-3題，都是課本習題，有答案，基本上分數是可以拿滿的、甚至最後會超過100。
+2. 如果上網查這門課的評價，應該算蠻兩極的，但整體教授算甜度中等。因為教授很堅持交大舊制，全班平均78左右，所以不會因為考試太難而給分很硬。
 3. 考試方面，以往都會（考古+課本習題+一點新題目），但今年期中考、期末考就幾乎是新出的題目，還有課本改編題目。113-1期中考的成績分佈如下：
 4. 考試都是全手寫，會部分給分，算慷慨，所以都會盡量寫。
 5. 週五的早九課會不定時點名，教授說會根據點名時的出席率決定最後要不要幫你調分。
 
 ### 心得
-
 1. 教授是一位和藹可親的教授，非常樂意下課回答問題，上課也會很希望大家可以回答他，但是我們都太害羞了。
 2. 我是大一先修機率，同時修微二、線代，沒有先學線代不會影響機率。機率主要是用到微積分泰勒展開式和多重積分，所以如果要先修機率的話可以先讀一下微二，這門課有4個大一生，機率算是蠻多人選擇先修掉的課，不然大二會很累。
+3. 考試準備的話以熟悉課本的習題、刷教授的考古，這是我這學期修的最有興趣也最有成就感的課，大學第一次拿到全班最高分。
+4. 雖然期中考平均只有45分，學期成績給分其實蠻大方的!
+
+<img src="https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/pictures/Semester_Grade.jpg" width="100">
 
 **最終成績: A+**
 
 # **電機系專業必修實驗**
 ## **數位實驗**
+***
 ### 任課教授
 陳建安
 ### 評分方式
@@ -119,7 +143,43 @@ demo efficiency)
 | 結報 | 彙整所有資料、進度、設計、最終結果 | 30% |
 | 線上影片互評 | 票選表現良好的組別，一人一票，不可以投自己 | 30% |
 
+### 心得
+
+**最終成績: A**
 
 # **電機系專業選修**
 ## **離散數學**
+***
+### 任課教授
+趙家佐
+### 評分方式
+1. Quizzes  30% (八次取六次最高)
+2. Midterms 35%
+3. Final	  35%
+### 介紹
+
+### 心得
+
+**最終成績: A-**
+
 ## **物件導向程式設計**
+***
+### 任課教授
+王學誠
+### 評分方式
+- Assignments:
+* Lab materials typically include 3 specific tasks (programming/algorithm/system work).
+* Ubuntu and Vim editor.
+* Colab and Jupyter Notebook for assignment submissions.
+
+- Evaluations:
+1. In-Class Lab/Tutorials (30%),
+2. Midterm Exam (25%)
+3. Final Presentation and Term Paper/Report (30%)
+4. Class Participations (GitHub Commits 10%, Others: 5%)
+
+### 介紹
+
+### 心得
+
+**最終成績: A+**
