--- a/_posts/2025-06-21-覓食地圖.md
+++ b/_posts/2025-06-21-覓食地圖.md
@@ -12,9 +12,7 @@ categories: jekyll update
 
 ***
 
-<div style="text-align: center;"> 
-  <h2><strong>吃正餐</strong></h2>
-</div>
+<h2 id="吃正餐" style="text-align: center;"><strong>吃正餐</strong></h2>
 
 ---
 ---
@@ -52,9 +50,7 @@ categories: jekyll update
 #### 當歸麵線 $110
 <img src="https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/photo/pork.jpg" width="500">
 
-<div style="text-align: center;"> 
-  <h2><strong>吃早午餐</strong></h2>
-</div>
+<h2 id="吃早午餐" style="text-align: center;"><strong>吃早午餐</strong></h2>
 
 ---
 ---
@@ -68,9 +64,7 @@ categories: jekyll update
 ***
 #### 薯餅蛋吐司 $65 + 鮮奶茶 $50
 
-<div style="text-align: center;"> 
-  <h2><strong>吃甜點</strong></h2>
-</div>
+<h2 id="吃甜點" style="text-align: center;"><strong>吃甜點</strong></h2>
 
 ---
 ---
