--- a/_posts/2025-02-18-大一上修課紀錄.md
+++ b/_posts/2025-02-18-大一上修課紀錄.md
@@ -169,47 +169,23 @@ Final 證明題多，且較難。
 
 
 ## **計算機概論與程式設計 英文班**
-
-
 ### 任課老師:
 陳宏明
-
-
 ### 評分依據:
-
-
-HW 15%                      *10 times*
-
-
-Lab 10%                     *12 times , On Tue.*
-
-
-Final Project 20%
-
-
-Midterm Paper Test 20%
-
-
-Final Paper Test 20%
-
-
-Final Programming Test 15%   * *電機系大會考* *
-
+1. HW 15%                      *10 times*
+2. Lab 10%                     *12 times , On Tue.*
+3. Final Project 20%
+4. Midterm Paper Test 20%
+5. Final Paper Test 20%
+6. Final Programming Test 15%   * *電機系大會考* *
 
 ### 介紹:
-
-
 #### HW
 教授出的，很仁慈。
-
-
 #### Lab
-助教出的，如果出的助教心情不好就很可怕，但比起其他門課已經算好了。
-
-
+助教出的，如果出的助教心情不好就很可怕，但比起其他門課已經算好了。[這是今年的Lab。](https://github.com/Hazel-1212/113-1-Lab.git)
 #### Final Project
 18位助教想出6個題目，最多兩人一組，填表單選前三志願想做哪個題目，按志願抽籤排序，題目有:2048、爆爆彈、Simple Routing、RGP(好像是一篇文章重新組合單詞...)、貪吃蛇、販賣機。
-
 
 #### Paper Test
 - 超過30個 A~? 編碼的英文專有名詞，1-10題名詞解釋，填上符合的名詞代碼。
@@ -219,31 +195,22 @@ Final Programming Test 15%   * *電機系大會考* *
 - 手寫程式題。
 - 方法 : 讀教授PPT，背熟專有名詞的英文和意思。手寫題很多，英文/中文皆可，據說用英文較容易拿分。
 
-
 #### Final Programming Test  
 用學校OJ試測資。滿分150分，最後將最高分調成100分。
-
 
 ### 心得:
 陳宏明教授的程式課相對適合程式新手，加上助教人還不錯，但是上機為保公平他們還是無情不幫忙。
 
-
 我和搭檔的Final Project因為有一份output file的路徑輸出順序相反，但當初專案說明並沒有說要從起點輸出，而是之後到E3上的討論區有人問，助教才說明，可我們倆都沒特別在看討論區這塊訊息。助教們最後為了公平，即使我們其實7條測資全過還是把我們的分數打7折...(影響學期成績4.2分!超多的!)。所以，一定要把E3的公告和討論區**通知打開**，HW修改等等的訊息可能都在上面，沒接到訊息可能沒分了!
-
 
 期末大會考也不用太緊張，他會看測資過多少部份給分。據說這次過最多的人，他的題數是6題。我當初OJ登不進去，所以現場只能手工測資，沒寫很多題，是高中畢業才學C++，最後至少有75分~供參考。
 
-
-**最終成績: A**<br/>
-
+**最終成績: A**
 
 ## **邏輯設計 英文班**
 ### 任課老師:
 賴柏承
-
-
 ### 評分依據:
-
 HW 20% * *7 times* *
 
 Quiz 20% * *7 times and take the best 5 grades* *
