--- a/_posts/2025-06-08-大一下修課紀錄.md
+++ b/_posts/2025-06-08-大一下修課紀錄.md
@@ -16,9 +16,9 @@ categories: jekyll update
 | [物理榮譽班(二)](#物理榮譽班(二)-英文班)      | 林俊良   | 期末報告硬、考試風格變換大 | ? |
 | [線性代數](#線性代數)            | 吳卓諭 | 功課多，考試全證明，助教很好 | A |
 | [機率](#機率-英文班)                | 高榮鴻 | 功課少，考試偏難，學期成績調分至全班平均78 | A+ |
-| [數位實驗](#數位實驗)            | 陳建安 | 花費時間長，結報分數低，期末專題占比重 | ? |
+| [數位實驗](#數位實驗)            | 陳建安 | 花費時間長，結報分數低，期末專題占比重 | A+ |
+| [物件導向程式設計](#物件導向程式設計) | 王學誠 | 線上上課放OCW，Lab主要像是在助教教學 | A+ |
 | [離散數學](#離散數學)            | 趙家佐 | 線上上課與小考，難易度主要是看有沒有感覺  | A- |
-| [物件導向程式設計](#物件導向程式設計) | 王學誠 | 線上上課放OCW，Lab主要像是在助教教學 | ? |
 
 # **電機系大一下必修**
 ## **微積分(二)**
@@ -91,21 +91,26 @@ __若和上一級的等第差不到一分，教授會手動調分升等。__
 # **電機系大二下必修**
 ## **機率 英文班**
 ***
-### 任課教授
+> ### 任課教授
+
 高榮鴻
-### 評分方式
+
+> ### 評分方式
+
 1. Homework and in-class performance: 20%
 2. Midterm Exam: 40%
 3. Final Exam: 40%
 
-### 介紹
+> ### 介紹
+
 1. 功課每次都是2-3題，都是課本習題，有答案，基本上分數是可以拿滿的、甚至最後會超過100。
 2. 如果上網查這門課的評價，應該算蠻兩極的，但整體教授算甜度中等。因為教授很堅持交大舊制，全班平均78左右，所以不會因為考試太難而給分很硬。
 3. 考試方面，以往都會（考古+課本習題+一點新題目），但今年期中考、期末考就幾乎是新出的題目，還有課本改編題目。113-1期中考的成績分佈如下：
 4. 考試都是全手寫，會部分給分，算慷慨，所以都會盡量寫。
 5. 週五的早九課會不定時點名，教授說會根據點名時的出席率決定最後要不要幫你調分。
 
-### 心得
+> ### 心得
+
 1. 教授是一位和藹可親的教授，非常樂意下課回答問題，上課也會很希望大家可以回答他，但是我們都太害羞了。
 2. 我是大一先修機率，同時修微二、線代，沒有先學線代不會影響機率。機率主要是用到微積分泰勒展開式和多重積分，所以如果要先修機率的話可以先讀一下微二，這門課有4個大一生，機率算是蠻多人選擇先修掉的課，不然大二會很累。
 3. 考試準備的話以熟悉課本的習題、刷教授的考古，這是我這學期修的最有興趣也最有成就感的課，大學第一次拿到全班最高分。
@@ -118,9 +123,12 @@ __若和上一級的等第差不到一分，教授會手動調分升等。__
 # **電機系專業必修實驗**
 ## **數位實驗**
 ***
-### 任課教授
+> ### 任課教授
+
 陳建安
-### 評分方式
+
+> ### 評分方式
+
 1. 0~12%	Quiz (Optional)	
 2. 20~32%	Lab Implementation	
 3. 24%	Lab Report	
@@ -132,10 +140,17 @@ demo efficiency)
 
 **最後助教決定不小考**
 
-### 介紹
+> ### 介紹
+
+>> #### 課程說明
+
 1. 數位實驗是電機系大一唯一的實驗課程，並非一定要修，畢業前修滿2個專業必修實驗即可。但還是很多人抽這門課，所以要抽到這門課還是有點難度。
-2. 主要是邏輯設計實驗和Verilog語言: 前四堂Lab有點像是邏輯設計的延伸，會用到一邏輯設計的概念來接線。後四堂Lab是在FPGA (Nexys4 DDR) 上跑verilog程式，最後要做FPGA的期末專案。
-3. 專案評分如下 :
+2. 主要是邏輯設計實驗和Verilog語言: 前四堂Lab是邏輯設計的延伸，會用到一邏輯設計的概念來接線，並用AD2來當IO。後四堂Lab是在FPGA (Nexys4 DDR) 上跑verilog程式，最後要做FPGA的期末專案。
+3. 對於還沒學電學的大一生，對課程會比較陌生，要花蠻多時間熟悉FPGA和Verilog。
+
+>> #### 關鍵1:期末專案
+
+1. 專案評分如下 :
 
 | 評分項目 | 描述 | 分數 |
 |----------------|----------|----------|
@@ -143,30 +158,79 @@ demo efficiency)
 | 結報 | 彙整所有資料、進度、設計、最終結果 | 30% |
 | 線上影片互評 | 票選表現良好的組別，一人一票，不可以投自己 | 30% |
 
-### 心得
+2. 助教已有強調不一定要用VGA，結果論來看確實不會因為VGA影響評分，很多同學也會選擇使用其他螢幕來顯示。
 
-**最終成績: A**
+>> #### 關鍵2:結報
+
+平均都70幾，其實很難抓到他到底怎麼改的，但還是有點小結論:
+1. 前四次Lab(AD2) : 助教會在報告模板上留下題目，要仔細回答，若有公式推論，過程要寫詳細不能只貼結果，不需要寫很多自問自答(Questions部分)。
+2. 後四次Lab(FPGA) : 其實不一定要自問自答，改成要寫實作過程。`每張圖要附解說`。最好可以有延伸資料，但很難有時間做啊。
+3. 助教曾發信來說如何寫好結報:
+
+```
+一、回答的完整性
+各位同學在繳交結報前，一定要注意所有實驗要求填寫的數據表格和圖片是正確的，再進行繳交動作，
+另外最重要的是所有的Question都應該要回答，不應該出現問題下方為空白，或者是不小心把問題偷偷刪掉的情況，
+以上為這次批改的真實案例，助教相信同學不是故意的，因此有依據回答的程度斟酌扣分。
+同時，有些同學為了美觀會更改原本的架構，請切記如果有更改原本預設架構的格式，
+回答的文字應放在顯眼的地方，或用粗體紅字等明顯標示，以避免發生助教不小心誤判而漏改的情形。
+
+二、回答的內容
+這部分也是我覺得各位同學可以再做得更好的地方，很多同學好像是對於question的定義有點誤會，
+其實他的主要目的是想要帶領各位思考這一部份實驗項目希望你所學會或熟悉的知識，加上這是一份實驗的報告，
+所謂報告就是拿出去可以讓大家快速理解你所做的內容以及了解你的思路和想傳達的理念，因此不應該只用兩三句話就結束，
+重點是如果回答的算有到位就還可以接受，但如果沒有回答到題目的想法，可能會讓批改的人不知所措。
+舉我印象最深刻的例子，有些question明明已經明確表示要推導(derive)出電路特性的方程式，
+但有些同學卻直接寫出答案，考試這樣寫我覺得應該不會拿到任何分數，報告也是如此，請記得一定要確實回答，
+為了避免，我建議嘗試將自己置於講台上教書的情境中，多描述、多解釋，將你的思考過程清楚地呈現在報告中。
+可能你的想法不是完全的正確，但至少透過包裝，給人的感覺會是你有在思考，而不會太過苛刻，我覺得這個非常重要
+
+三、回答的目的性
+有些同學很認真有做理論值的表格和圖表的視覺化呈現，但是同學都沒有對自己所做的內容下一個結論，
+簡單來說就是少了「所以由這張圖/表，我們可以得到......的結論，與實驗的內容.......」的總結句，不是東西放在上面就結束了，
+此外，報告所作的結論應該避免出現：「所以我們可以知道數值有變化」，這種模稜兩可的語句，
+應該要有更清晰明確的指示告訴讀者你到底在做甚麼，好讓讀者更快進入狀況
+
+四、回答的多元性
+最後，相信各位同學一定對於報告到底還可以寫甚麼感到好奇，基本上以上都有涵蓋到結報就不會有太大的問題 ，
+但請各位注意，資料補充的內容還是應該以電路相關為主，不要找一堆無效資訊來濫竽充數，這樣只會起到反效果:
+
+  1. 實驗部分
+  其實各位同學可以把你在做實驗過程當中所犯的小錯誤收集起來，有可能是器材問題，也有可能是電路問題，並把你最後解決的方式寫入報告當中，
+  同時，同學也可以嘗試獲取實驗的理論數值，可以是推導或是電路軟體模擬，將這些數值與實驗所得到的數值做比較，並說明差異
+
+  2. 原理部分
+  其實同學可以翻閱當周實驗講義電子學，觀察是否有你以前或現在學過的內容，或者透過網路找尋相關資料，將之加以整合並書寫
+
+最後，我想對看到這裡的同學表示由衷的敬意，你們非常棒。我希望這些建議能夠對你們有所幫助，期待大家在未來能夠取得更好的成績，一起進步，加油！
+```
+>> #### 關鍵3:bonus
+
+1. 最後的三堂Lab(FPGA)提早一周前做完1個experiment就可以拿1個bonus，最多9個。bonus分數就是在*12%	Miscellaneous items*裡面。
+2. 盡量拿滿，但是期末很忙又要學Verilog還得趕實驗真的很累(還記得那時候早上五點爬起來打verilog)，Vivado軟體要synthesize又要等，一直debug的話超級耗時間!
+3. 所以非常非常建議要和認識的學長姐問有沒有修過可以提供結報和程式參考，也要有修課夥伴，不然在那裏卡很久也不是辦法。
+
+> ### 心得
+
+1. 很推薦大一下來修這門課。雖然花時間，但學到很多。
+2. 給分方面，不是個甜課。結報和期末專案平均都70初。
+但是助教說分數會調整過，最後我算原始分數，我就算*32%Lab* 、 *12%	Miscellaneous items*拿滿也是89.3分，最後等第有A+。
+3. 助教說會參考每個同學整體的表現來給予等第。bonus、專題的表現應該是都會影響到最後給分。
+4. 我結報不高，主要是專題有86分。助教的專題結報不會太刁難，demo、互評給的分數各組就真的蠻有差距，但互評除非做得特別炫或者人脈好不然也沒辦法~
+demo會有五個助教聽每組解說並展示，重點是要讓他們聽懂、表達夠生動、強調特色、並且邀請助教來操作，畢竟助教很多也還是研究所學生，demo當場的氛圍、流程的順暢度有時比作品真的如何更能影響分數。
+
+**最終成績: A+**
 
 # **電機系專業選修**
-## **離散數學**
-***
-### 任課教授
-趙家佐
-### 評分方式
-1. Quizzes  30% (八次取六次最高)
-2. Midterms 35%
-3. Final	  35%
-### 介紹
-
-### 心得
-
-**最終成績: A-**
 
 ## **物件導向程式設計**
 ***
-### 任課教授
+> ### 任課教授
+
 王學誠
-### 評分方式
+
+> ### 評分方式
+
 - Assignments:
 * Lab materials typically include 3 specific tasks (programming/algorithm/system work).
 * Ubuntu and Vim editor.
@@ -178,8 +242,26 @@ demo efficiency)
 3. Final Presentation and Term Paper/Report (30%)
 4. Class Participations (GitHub Commits 10%, Others: 5%)
 
-### 介紹
+> ### 介紹
 
-### 心得
+> ### 心得
 
 **最終成績: A+**
+
+## **離散數學**
+***
+> ### 任課教授
+
+趙家佐
+
+> ### 評分方式
+
+1. Quizzes  30% (八次取六次最高)
+2. Midterms 35%
+3. Final	  35%
+
+> ### 介紹
+
+> ### 心得
+
+**最終成績: A-**
