--- a/_posts/2025-02-18-大一上修課紀錄.md
+++ b/_posts/2025-02-18-大一上修課紀錄.md
@@ -11,20 +11,20 @@ categories: jekyll update
 
 | 課名           | 教授      | 心得         | 成績     |
 |----------------|----------|----------------|----------|
-| 微積分         | 王夏聲   | 涼但考試較難占比重 | A+ |
-| 普通物理       | 林俊良   | 期末報告硬、考試風格變換大 | A+ |
-| 計算機概論     | 陳宏明   | C++初學者友善、筆試考考古 | A |
-| 邏輯設計       | 賴柏承   | 功課小考多，但都從課本出 | A+ |
-| 數位設計與製造 | 曾聖凱   | 課程有趣，但專題要用心做~ | A- |
-| 西洋歌劇史     | 宋育任   | 學到很多，但考試很硬 | A- |
-| 仿生科技       | 陳榮治   | 線上，非常涼、期末報告做好即可 | A+ |
+| 🧮[微積分甲(一)](#微積分甲(一)) | 王夏聲   | 涼但考試較難占比重 | A+ |
+| 🌌[普通物理一](#物理一-英文班)       | 林俊良   | 期末報告硬、考試風格變換大 | A+ |
+| 💻[計算機概論](#計算機概論與程式設計-英文班)     | 陳宏明   | C++初學者友善、筆試考考古 | A |
+| ⚡[邏輯設計](#邏輯設計-英文班)       | 賴柏承   | 功課小考多，但都從課本出 | A+ |
+| 🏛️[數位設計與製造](#數位設計與製造) | 曾聖凱   | 課程有趣，但專題要用心做~ | A- |
+| 🎵[西洋歌劇史](#西洋歌劇史)     | 宋育任   | 學到很多，但考試很硬 | A- |
+| 🧬[仿生科技](#仿生科技)       | 陳榮治   | 線上，非常涼、期末報告做好即可 | A+ |
 
 GPA: 4.12   
 
 Rank: 35 / 248
 
 # **電機系大一上必修**
-## **微積分(一)**
+## **微積分甲(一)**
 
 ### 任課老師:
 王夏聲
