--- a/_posts/2025-06-19-交大打工仔.md
+++ b/_posts/2025-06-19-交大打工仔.md
@@ -5,27 +5,28 @@ date:   2025-06-19 15:29:39 +0800
 categories: jekyll update
 ---
 
-# 目錄
-## 🎓 大一升大二暑期
-- [【影像多媒體】企劃組](#影像多媒體企劃組)
-- [畢業典禮工作人員](#畢業典禮工作人員)
-- [自習中心 工讀生](#自習中心-工讀生)
+# 📌 **目錄**
+## 🏷️ 大一升大二暑期
+- 🔜[【影像多媒體】企劃組](#影像多媒體企劃組)
+- 📆[教學實踐研究計畫成果交流會工讀生]
+- ⏳[自習中心 工讀生](#自習中心-工讀生)
+- ✅[畢業典禮工作人員](#畢業典禮工作人員)
 
-## 📚 大一下
-- [科法所 工讀生](#科法所-工讀生)
-- [Open House 春季就業博覽會 工作人員](#open-house-春季就業博覽會-工作人員)
+
+## 🏷️ 大一下
+- ✅[科法所 工讀生](#科法所-工讀生)
+- ✅[Open House 春季就業博覽會 工作人員](#open-house-春季就業博覽會-工作人員)
 
 ***
 
 ## **【影像多媒體】企劃組**
 ***
-
-(申請中)
 ### 單位
 校務大數據中心
 ### 時間
-2025
+2025/08~
 ### 薪資  
+200 / hr
 ### 工作內容
 ### 心得
 
