--- a/_posts/2025-06-19-交大打工仔.md
+++ b/_posts/2025-06-19-交大打工仔.md
@@ -7,82 +7,130 @@ categories: jekyll update
 
 # 📌 **目錄**
 ## 🏷️ 大一升大二暑期
+- 📆[教學實踐研究計畫成果交流會工讀生](#教學實踐研究計畫成果交流會工讀生)
 - 🔜[【影像多媒體】企劃組](#影像多媒體企劃組)
-- 📆[教學實踐研究計畫成果交流會工讀生]
 - ⏳[自習中心 工讀生](#自習中心-工讀生)
 - ✅[畢業典禮工作人員](#畢業典禮工作人員)
-
 
 ## 🏷️ 大一下
 - ✅[科法所 工讀生](#科法所-工讀生)
 - ✅[Open House 春季就業博覽會 工作人員](#open-house-春季就業博覽會-工作人員)
 
+```
+📆:申請中
+🔜:即將上任
+⏳:進行中
+✅:已結束
+```
+
 ***
 
 ## **【影像多媒體】企劃組**
 ***
-### 單位
+> ### 單位
+
 校務大數據中心
-### 時間
+
+> ### 時間
+
 2025/08~
-### 薪資  
+
+> ### 薪資  
+
 200 / hr
-### 工作內容
-### 心得
+
+> ### 工作內容
+
+> ### 心得
 
 ## **畢業典禮工作人員**
 ***
-### 單位
+> ### 單位
+
 系統與工程學士學程
-### 時間 
+
+> ### 時間 
+
 2025/06/16 6hr
-### 薪資
+
+> ### 薪資
+
 190 / hr 
-### 工作內容
+
+> ### 工作內容
+
 協助場佈
-### 心得
+
+> ### 心得
+
 所辦的姐姐人非常好，基本上其實沒什麼事給我們做，但是中午還提供個人+大披薩+雞翅給工讀生，下午還訂五桐號飲料請我們。
 
 ## **自習中心 工讀生**
 ***
-### 單位
+> ### 單位
+
 圖書館三樓自習中心
-### 時間 
+
+> ### 時間 
+
 2025/06/09~2025/08/29 
 
 週二早班 09:00~13:00
 
-### 薪資
+> ### 薪資
+
 190 / hr 
-### 工作內容
+
+> ### 工作內容
+
 借還書、文書處理、批改語言護照學習單
-### 心得
+
+> ### 心得
+
 自習中心的姐姐很親切，圖書館的工讀基本上都是涼缺，而且自習中心平常人不多，熟悉一下借還書系統就差不多了。我來這裡工讀後才發現中心內提供很多只能內閱的語言檢定參考書(托福雅思日檢韓檢都有...)，日後要考照可以直接來這，不然那些書很貴。
 
 ## **科法所 工讀生**
 ***
-### 單位
+> ### 單位
+
 陽明交大科技法律所
-### 時間 
+
+> ### 時間 
+
 2025/02/17~2025/06/08 
 周一早班/周二晚班/周三午班
-### 薪資
-190 / hr 
-### 工作內容
+
+> ### 薪資
+
+190 / hr
+
+> ### 工作內容
+
 跑公文和文書處理
-### 心得
+
+> ### 心得
+
 晚班事情比較少，白天班其實蠻多事情的，我剛好這學期學分多但有想趁大一先有工讀經驗、賺點生活費，所以硬著頭皮接了。我在這裡認識所辦姐姐和科法所研究生，
 最印象深刻的是遇到同樣是電機系的學長，他就和我分享他到大二後發現自己不喜歡電機，雖然做了專題但是最後還是選擇讀法律，還推薦我那些法學書對我比較有幫助，真的很酷。
 
 ## **Open House 春季就業博覽會 工作人員**
 ***
-### 單位
+> ### 單位
+
 產學合作中心
-### 時間 
+
+> ### 時間 
+
 2025/03/19
-### 薪資
+
+> ### 薪資
+
 190 / hr ; 10 hr
-### 工作內容
+
+> ### 工作內容
+
 協助公司HR向學生介紹或宣傳
-### 心得
+
+> ### 心得
+
 我是負責幫助啟碁科技的攤位，啟碁主要是做通訊5G、射頻等等。
