--- a/_posts/2025-07-06-大二上修課紀錄.md
+++ b/_posts/2025-07-06-大二上修課紀錄.md
@@ -10,18 +10,18 @@ categories: jekyll update
 - 一覽 :
 
 > 電機系
-電子學(二)
-電子實驗(一)
-微分方程
-演算法
-
-> 通識
-全球工程領袖
-那些動物教我的事
+⚡電子學(二)
+⚡電子實驗(一)
+🧮微分方程
+💻演算法
 
 > 交大資財系
-財務數學
+💰財務數學
 
 > 清大計財系
-會計學(一)
-財務管理
+💰會計學(一)
+💰財務管理
+
+> 通識
+⚙️全球工程領袖
+🐞那些動物教我的事
