--- a/_posts/2025-07-06-暑修電子學.md
+++ b/_posts/2025-07-06-暑修電子學.md
@@ -5,9 +5,9 @@ date:   2025-07-06 01:19:39 +0800
 categories: jekyll update
 ---
 
-# Microelectronics - Learning Trajectory
-> ## Circuit Theory
->> ### YouTube--QuestionSolutions
+># Microelectronics - Learning Trajectory
+>> ## Circuit Theory
+>>> ### YouTube--QuestionSolutions
 [The Complete Guide to Thevenin's Theorem  (Solved Examples)](https://www.youtube.com/watch?v=-X7otqsma4Q)
 [Circuit Analysis Playlist](https://www.youtube.com/playlist?list=PLXePpKFSUW2abKgvj_hClQS1NK86SCHfy)
 
