--- a/_posts/2025-07-11-二手書出售.md
+++ b/_posts/2025-07-11-二手書出售.md
@@ -6,14 +6,15 @@ categories: jekyll update
 ---
 
 # 💡**動機**
-度過大學緊湊而充實的一年後，回家看到一整櫃的高中數理參考書，遙想昔日自己和他們奮戰的過程尚歷歷在目，如今它們功成身退，我捨不得丟掉，舍弟不肯收養，故來此尋找有緣的人。
+回家看到一整櫃的高中數理參考書，遙想昔日自己和他們奮戰的過程尚歷歷在目，
+如今它們功成身退，我捨不得丟掉，故尋找有緣的人。
 
 # 🎯 **受眾**
-學測/分科重考生
+- 學測/分科重考生
 
-想精進數理能力之人
+- 想精進數理能力之人
 
-家中弟妹有需求之人
+- 家中弟妹有需求之人
 
 # 🔥 **書況**
 本人不常將作答寫上去，書況良好。
@@ -21,10 +22,10 @@ categories: jekyll update
 惟部分頁面有劃記與作題。
 
 # 📚 **清單**
-> 🧮 徐氏數學 （共 8 冊）：
->>（1）高中 一 ~ 六冊 
+> 🧮 徐氏數學 （共 6 冊）：
+>>（1）高中 一 ~ 四冊 
 
->>（2）選修甲（上冊）、（下冊）
+>>（2）選修數甲（上冊）、（下冊）
 
 > 🌌 物理三色書 (鍾鎮麟) 
 >>（1）黃皮書（物理的基本觀念）上冊、下冊 
@@ -52,8 +53,8 @@ categories: jekyll update
 # 📦 **交易方式** 
 📣  歡迎私訊(message/gmail)。
 
-📣  屬意交大面交。
+📣  交大面交優先。
 
-📣  若先付郵資與部分訂金，可郵寄。
+📣  若事先付郵資與部分訂金，可郵寄。
 
 📣  詳見附圖。
