--- a/_posts/2025-07-11-二手書出售.md
+++ b/_posts/2025-07-11-二手書出售.md
@@ -1,60 +1,91 @@
 ---
 layout: post
-title:  "二手書出售"
+title:  "書香傳遞~二手書出售"
 date:   2025-07-11 01:19:39 +0800
 categories: jekyll update
 ---
 
 # 💡**動機**
-回家看到一整櫃的高中數理參考書，遙想昔日自己和他們奮戰的過程尚歷歷在目，
+回家看到一整櫃的高中參考書，遙想昔日自己和他們奮戰的過程尚歷歷在目，
 如今它們功成身退，我捨不得丟掉，故尋找有緣的人。
-
-# 🎯 **受眾**
-- 學測/分科重考生
-
-- 想精進數理能力之人
-
-- 家中弟妹有需求之人
 
 # 🔥 **書況**
 本人不常將作答寫上去，書況良好。
 
-惟部分頁面有劃記與作題。
+惟部分頁面有劃記與作題，購買前會先告知，接受後再購買。
 
-# 📚 **清單**
-> 🧮 徐氏數學 （共 6 冊）：
->>（1）高中 一 ~ 四冊 
+# 📚 **系列清單**
+> 🧮 **徐氏數學**
+>> 1. 高二上(3A)
+2. 高二下(3B)
+3. 選修數甲上-極限與函數、微分
+4. 選修數甲上-微分積分
+5. 選修數甲下-分布與統計、複數與複數平面
+6. 選修數甲下-複數與複數平面、二次曲線
 
->>（2）選修數甲（上冊）、（下冊）
+*高一上下暫借*
 
-> 🌌 物理三色書 (鍾鎮麟) 
->>（1）黃皮書（物理的基本觀念）上冊、下冊 
+> 🧮 **陳一理-新觀念數學叢書**
+>> 1. 機率
+2. 積分
+
+> 🧮 **TRML 歷屆試題暨詳解**
+>> 1. III (2016-2022)
+
+> 🌌 **鍾鎮麟-物理的基本觀念 (黃皮書)**
+>> 1. 上冊
+2. 下冊 
 >>>*主要必修，也有一點選修
-
->>（2）綠皮書（物理的解題方法）上冊、中冊、下冊 
+ 
+> 🌌 **鍾鎮麟-物理的解題方法 (綠皮書)** 
+>>1. 上冊
+2. 中冊
+3. 下冊 
 >>>*主要為選修
 
->>（3）藍皮書（實驗題）
+> 🌌 **鍾鎮麟-物理探究實作實驗題解法 (藍皮書)**
+>>1. 藍皮書乙本
 
-> 🧪九陰真經化學 （2019舊版，但對付分科也很夠用了）
->>（1）（上冊）、（下冊）
+> 🧪**九陰真經化學 （2019舊版）**
+>> 1. 上冊
+2. 下冊
 
 # 💰 **價格**
-> 🧮 徐氏數學 : $ 200 / 冊
+🧮 徐氏數學 : $ 200 / 冊
 
-> 🌌 物理黃皮書 (鍾鎮麟) $ 150 / 冊 
+🧮 陳一理-新觀念數學叢書-機率 : $ 130 / 冊
 
-> 🌌 物理綠皮書 (鍾鎮麟) $ 250 / 冊 
+🧮 陳一理-新觀念數學叢書-積分 : $ 190 / 冊
 
-> 🌌 物理藍皮書 (鍾鎮麟) $ 150 / 冊 
+🧮 TRML 歷屆試題暨詳解 : $ 150 / 本
 
-> 🧪 九陰真經化學  $ 100 / 冊
+🌌 物理黃皮書 (鍾鎮麟) $ 150 / 冊
+
+🌌 物理綠皮書 (鍾鎮麟) $ 250 / 冊 
+
+🌌 物理藍皮書 (鍾鎮麟) $ 150 / 冊 
+
+🧪 九陰真經化學  $ 100 / 冊
+
+🦠 生物課本 (選修/必修I、II) : $ 50 / 冊 
+
+🦠 生物分科測驗4568 : $ 100 / 冊 (只寫一回)
+
+🔠 CNN專訪名人 $ 200 / 本
+
+🔠 biz投資英語 $ 200 / 本
+
+🔠 YBM TOEIC聽力1000題+解析 $ 400 / 份
+
+🔠 NEW GEPT 寫作&口說 中高級題庫解析(含CD) $ 250 / 本
+
+🔠 GEPT 初級口說測驗 $ 100 / 本
 
 # 📦 **交易方式** 
-📣  歡迎私訊(message/gmail)。
+📣  歡迎私訊(message/gmail)問詳細書況。
 
-📣  交大面交優先。
+📣  交大or清大面交。
 
 📣  若事先付郵資與部分訂金，可郵寄。
 
-📣  詳見附圖。
+📣  附圖供參考。
