--- a/_posts/2025-07-11-二手書出售.md
+++ b/_posts/2025-07-11-二手書出售.md
@@ -6,8 +6,8 @@ categories: jekyll update
 ---
 
 # 💡**動機**
-回家看到一整櫃的高中參考書，遙想昔日自己和他們奮戰的過程尚歷歷在目，
-如今它們功成身退，我捨不得丟掉，故尋找有緣的人。
+回家看到一整櫃的高中參考書，夢迴昔日自己還是學測/分科戰士時，與他們並肩走過大考的凌遲與模擬考的陣痛，
+如今它們功成身退，我捨不得丟掉，故來尋找一樣熱愛知識的人。
 
 # 🔥 **書況**
 本人不常將作答寫上去，書況良好。
@@ -80,6 +80,8 @@ categories: jekyll update
 🔠 NEW GEPT 寫作&口說 中高級題庫解析(含CD) $ 250 / 本
 
 🔠 GEPT 初級口說測驗 $ 100 / 本
+
+📒 閱讀理解-品學堂-PISA閱讀素養  $ 100 / 本
 
 # 📦 **交易方式** 
 📣  歡迎私訊(message/gmail)問詳細書況。
