--- a/_posts/2025-07-23-即使，今晚這份戀情會從世界上消失.md
+++ b/_posts/2025-07-23-即使，今晚這份戀情會從世界上消失.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title:  "💔今夜、世界からこの恋が消えても"
+title:  "🌧️即使，今晚這份戀情會從世界上消失"
 date:   2025-07-23 18:08:39 +0800
 categories: jekyll update
 ---
 
 <h1 id="😭BadEnding" style="text-align: center;"><strong>😭BadEnding</strong></h1>
 
-<h2 id="😢即使，今晚這份戀情會從世界上消失" style="text-align: center;"><strong>😢即使，今晚這份戀情會從世界上消失</strong></h2>
+<h2 id="💔今夜、世界からこの恋が消えても" style="text-align: center;"><strong>💔今夜、世界からこの恋が消えても</strong></h2>
     
 
 ---
