--- a/_posts/2025-07-23-被擦掉的初戀.md
+++ b/_posts/2025-07-23-被擦掉的初戀.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title:  "💕消えた初恋"
+title:  "🌸消失的初戀"
 date:   2025-07-23 18:08:39 +0800
 categories: jekyll update
 ---
 
 <h1 id="😊HappyEnding" style="text-align: center;"><strong>😊HappyEnding</strong></h1>
 
-<h2 id="🌸被擦掉的初戀" style="text-align: center;"><strong>🌸被擦掉的初戀</strong></h2>
+<h2 id="💕消えた初恋" style="text-align: center;"><strong>💕消えた初恋</strong></h2>
 
 ---
 ### 🎞️ 首映: 2021年
