--- a/_posts/2025-07-11-二手書出售.md
+++ b/_posts/2025-07-11-二手書出售.md
@@ -18,37 +18,18 @@ categories: jekyll update
 > 🧮 **徐氏數學**
 >> 1. 高二上(3A)
 2. 高二下(3B)
-3. 選修數甲上-極限與函數、微分
-4. 選修數甲上-微分積分
-5. 選修數甲下-分布與統計、複數與複數平面
-6. 選修數甲下-複數與複數平面、二次曲線
-
-*高一上下暫借*
 
 > 🧮 **陳一理-新觀念數學叢書**
 >> 1. 機率
 2. 積分
 
-> 🧮 **TRML 歷屆試題暨詳解**
->> 1. III (2016-2022)
-
 > 🌌 **鍾鎮麟-物理的基本觀念 (黃皮書)**
 >> 1. 上冊
 2. 下冊 
 >>>*主要必修，也有一點選修
- 
-> 🌌 **鍾鎮麟-物理的解題方法 (綠皮書)** 
->>1. 上冊
-2. 中冊
-3. 下冊 
->>>*主要為選修
 
 > 🌌 **鍾鎮麟-物理探究實作實驗題解法 (藍皮書)**
 >>1. 藍皮書乙本
-
-> 🧪**九陰真經化學 （2019舊版）**
->> 1. 上冊
-2. 下冊
 
 # 💰 **價格**
 🧮 徐氏數學 : $ 200 / 冊
@@ -57,29 +38,13 @@ categories: jekyll update
 
 🧮 陳一理-新觀念數學叢書-積分 : $ 190 / 冊
 
-🧮 TRML 歷屆試題暨詳解 : $ 150 / 本
-
 🌌 物理黃皮書 (鍾鎮麟) $ 150 / 冊
 
-🌌 物理綠皮書 (鍾鎮麟) $ 250 / 冊 
-
 🌌 物理藍皮書 (鍾鎮麟) $ 150 / 冊 
-
-🧪 九陰真經化學  $ 100 / 冊
 
 🦠 生物課本 (選修/必修I、II) : $ 50 / 冊 
 
 🦠 生物分科測驗4568 : $ 100 / 冊 (只寫一回)
-
-🔠 CNN專訪名人 $ 200 / 本
-
-🔠 biz投資英語 $ 200 / 本
-
-🔠 YBM TOEIC聽力1000題+解析 $ 400 / 份
-
-🔠 NEW GEPT 寫作&口說 中高級題庫解析(含CD) $ 250 / 本
-
-🔠 GEPT 初級口說測驗 $ 100 / 本
 
 📒 閱讀理解-品學堂-PISA閱讀素養  $ 100 / 本
 
@@ -88,6 +53,4 @@ categories: jekyll update
 
 📣  交大or清大面交。
 
-📣  若事先付郵資與部分訂金，可郵寄。
-
-📣  附圖供參考。
+📣  7-11 賣貨便。
