update chinese drama

--- a/_posts/2025-07-23-被擦掉的初戀.md
+++ b/_posts/2025-07-23-被擦掉的初戀.md
@@ -20,9 +20,9 @@ categories: jekyll update
 - **鈴木仁** - 相多颯人
 
 ### 🌸心得
-這部劇是我第一部看完的日本電視劇，從此入坑日劇和日本男團。道枝駿佑和目黑蓮兩位成員的化學反應讓我看得很開心，之後我又去聽兩個演員的劇和偶像團體，Snow Man和浪花男子的歌很好聽。
+這部劇是我第一部看完的日本電視劇，從此入坑日劇和日本男團。道枝駿佑和目黑蓮兩位成員的化學反應讓我看得很開心，之後我又去聽兩個演員的劇和偶像團體，Snow Man和浪花男子的歌很好聽。最喜歡看道枝駿佑和目黒蓮!我甚至覺得，兩人後來各自搭戲的女星都不如蓮理枝有CP感。
+- [🤍道枝駿佑 x 🖤目黑蓮](/Hazel-the-Cat/jekyll/update/2025/07/25/MichiAndMeme.html)
 
-最喜歡看道枝駿佑和目黒蓮的cp啦!我甚至覺得，兩人後來各自搭戲的女星都不如蓮理枝有CP感。
 ### 💿 OST
 [初心LOVE（うぶらぶ） - なにわ男](https://youtu.be/qNrRnnG8glY?feature=shared)
 
