--- a/_posts/2025-06-19-交大打工仔.md
+++ b/_posts/2025-06-19-交大打工仔.md
@@ -12,7 +12,7 @@ categories: jekyll update
 - ✅[科法所 工讀生](#科法所-工讀生)
 
 ## 🏷️ 臨時工讀
-- 📆[教學實踐研究計畫成果交流會工讀生](#教學實踐研究計畫成果交流會工讀生)
+- 🔜[教學實踐研究計畫成果交流會工讀生](#教學實踐研究計畫成果交流會工讀生)
 - ✅[畢業典禮工作人員](#畢業典禮工作人員)
 - ✅[Open House 春季就業博覽會 工作人員](#open-house-春季就業博覽會-工作人員)
 
