--- a/_posts/2025-06-19-交大打工仔.md
+++ b/_posts/2025-06-19-交大打工仔.md
@@ -8,13 +8,13 @@ categories: jekyll update
 # 📌 **目錄**
 ## 🏷️ 長期工讀
 - 🔜[【影像多媒體】企劃組](#影像多媒體企劃組)
-- ⏳[自習中心 工讀生](#自習中心-工讀生)
-- ✅[科法所 工讀生](#科法所-工讀生)
+- ⏳[自習中心工讀生](#自習中心工讀生)
+- ✅[科法所工讀生](#科法所工讀生)
 
 ## 🏷️ 臨時工讀
 - 🔜[教學實踐研究計畫成果交流會工讀生](#教學實踐研究計畫成果交流會工讀生)
 - ✅[畢業典禮工作人員](#畢業典禮工作人員)
-- ✅[Open House 春季就業博覽會 工作人員](#open-house-春季就業博覽會-工作人員)
+- ✅[Open_House_春季就業博覽會_工作人員](#Open_House_春季就業博覽會_工作人員)
 
 ```
 📆:申請中
@@ -65,7 +65,7 @@ categories: jekyll update
 
 所辦的姐姐人非常好，基本上其實沒什麼事給我們做，但是中午還提供個人+大披薩+雞翅給工讀生，下午還訂五桐號飲料請我們。
 
-## **📖 自習中心 工讀生**
+## **📖 自習中心工讀生**
 ***
 > ### 單位
 
@@ -89,7 +89,7 @@ categories: jekyll update
 
 自習中心的姐姐很親切，圖書館的工讀基本上都是涼缺，而且自習中心平常人不多，熟悉一下借還書系統就差不多了。我來這裡工讀後才發現中心內提供很多只能內閱的語言檢定參考書(托福雅思日檢韓檢都有...)，日後要考照可以直接來這，不然那些書很貴。
 
-## **🏛️ 科法所 工讀生**
+## **🏛️ 科法所工讀生**
 ***
 > ### 單位
 
@@ -112,7 +112,7 @@ categories: jekyll update
 
 是精實的工讀。晚班事情比較少，白天班蠻多事情、幾乎很難做自己的事，我剛好這學期學分多，但有想趁大一先有工讀經驗、賺點生活費，所以硬著頭皮接了3個班(一周11小時)。我在這裡認識所辦姐姐和科法所研究生， 最印象深刻的是遇到同樣是電機系的學長，他就和我分享他到大二後發現自己不喜歡電機，雖然做了專題但是最後還是選擇讀法律，還推薦我那些法學書對我比較有幫助，真的很酷。很幸運第一份工讀就遇上了科法所，讓我漸漸熟悉工讀這一行~
 
-## **🔥 Open House 春季就業博覽會 工作人員**
+## **🔥 Open_House_春季就業博覽會_工作人員**
 ***
 > ### 單位
 
