--- a/_posts/2025-06-21-覓食地圖.md
+++ b/_posts/2025-06-21-覓食地圖.md
@@ -17,8 +17,10 @@ categories: jekyll update
 ---
 ---
 
-### 咖哩寶藏
+### [咖哩寶藏](https://www.google.com/maps/place/%E5%92%96%E5%93%A9%E5%AF%B6%E8%97%8F/@24.7990273,120.9879532,17z/data=!3m1!4b1!4m6!3m5!1s0x346837a38562f167:0x48d6dca866d23078!8m2!3d24.7990273!4d120.9905281!16s%2Fg%2F11rql952m6?entry=ttu&g_ep=EgoyMDI1MDgxMi4wIKXMDSoASAFQAw%3D%3D)
 ***
+
+**⭐ 愛店**
 #### 菇雞菇雞黑咖哩 $140
 <img src="https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/photo/curry.jpg" width="500">
 
@@ -71,6 +73,8 @@ categories: jekyll update
 
 ### 磨豆
 ***
+
+**⭐ 愛店**
 #### 5號豆花冰沙~兩球豆冰+紫米紅豆 $55
 <img src="https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/photo/磨豆.jpg" width="500">
 
