--- a/_posts/2025-07-25-Snow-Man.md
+++ b/_posts/2025-07-25-Snow-Man.md
@@ -4,3 +4,31 @@ title:  "❄️Snow Man"
 date:   2025-07-25 16:08:39 +0800
 categories: jekyll update
 ---
+
+# Snow Man 歌單中最喜歡的歌3首歌
+
+## <<TWO>>
+
+🖤どんなうれしいことも悲しい痛みも
+
+🖤分け合って歩いてきた僕ら言葉さえいらなくて
+
+💙そっと気付かれないように二人見つめた
+
+💙瞳の先に同じ人がいることもうわかってた
+
+🖤誰よりも知っていたはず
+
+💙彼女と僕らつなぐ細い糸の意味を
+
+🖤叶うならあの指を 柔らかなあの声を
+
+🖤誰も知らない世界へ奪い去りたい
+
+💙叶わないこの胸の痛みを同じように
+
+💙隠してる優しささえわかってるのに
+
+## <<Dangerholic>>
+
+## <<HELLO HELLO>>
