--- a/_posts/2025-07-06-大二上修課紀錄.md
+++ b/_posts/2025-07-06-大二上修課紀錄.md
@@ -12,16 +12,14 @@ categories: jekyll update
 > 電機系
 ⚡電子學(二)
 ⚡電子實驗(一)
+⚡電路學
 🧮微分方程
+💻資料結構
 💻演算法
-
-> 交大資財系
-💰財務數學
 
 > 清大計財系
 💰會計學(一)
 💰財務管理
 
-> 通識
-⚙️全球工程領袖
-🐞那些動物教我的事
+> 通識⚙️
+🧮統計學
