--- a/_posts/2025-06-19-交大打工仔.md
+++ b/_posts/2025-06-19-交大打工仔.md
@@ -7,14 +7,14 @@ categories: jekyll update
 
 # 📌 **目錄**
 ## 🏷️ 長期工讀
-- 🔜[【影像多媒體】企劃組](#影像多媒體企劃組)
-- ⏳[自習中心工讀生](#自習中心工讀生)
-- ✅[科法所工讀生](#科法所工讀生)
+- 🔜[【影像多媒體】企劃組](##📈【影像多媒體】企劃組)
+- ⏳[自習中心工讀生](##📖 自習中心工讀生)
+- ✅[科法所工讀生](##🏛️ 科法所工讀生)
 
 ## 🏷️ 臨時工讀
-- 🔜[教學實踐研究計畫成果交流會工讀生](#教學實踐研究計畫成果交流會工讀生)
-- ✅[畢業典禮工作人員](#畢業典禮工作人員)
-- ✅[Open_House_春季就業博覽會_工作人員](#Open_House_春季就業博覽會_工作人員)
+- 🔜[教學實踐研究計畫成果交流會工讀生](##教學實踐研究計畫成果交流會工讀生)
+- ✅[畢業典禮工作人員](##🔥畢業典禮工作人員)
+- ✅[Open_House_春季就業博覽會_工作人員](##Open_House_春季就業博覽會_工作人員)
 
 ```
 📆:申請中
@@ -24,6 +24,7 @@ categories: jekyll update
 ```
 
 ***
+## 教學實踐研究計畫成果交流會工讀生
 
 ## **📈【影像多媒體】企劃組**
 ***
