--- a/_posts/2025-07-06-大二上修課紀錄.md
+++ b/_posts/2025-07-06-大二上修課紀錄.md
@@ -14,7 +14,14 @@ categories: jekyll update
 ⚡電子實驗(一)
 ⚡電路學
 🧮微分方程
+
 💻資料結構
+
+1.學期作業、考試、評量：
+1. Homework: 20%
+2. Final project: 40%
+3. Exam: 40%
+
 💻演算法
 
 > 清大計財系
